# recipeVault

./: .gitignore  LOCAL_AI.md  README.md  index.html  package-lock.json  package.json  vite.android.config.js  vite.config.js
android-studio/: README.md  settings.gradle.kts
android-studio/app/: build.gradle.kts
android-studio/app/src/main/: AndroidManifest.xml
android-studio/app/src/main/assets/models/: README.md
android-studio/app/src/main/assets/web/: index.html
android-studio/app/src/main/assets/web/assets/: index-Br0-Ut6r.css  index-C8Bi5oo7.js
android-studio/app/src/main/java/com/recipevault/app/: MainActivity.kt  NativeBridge.kt
android-studio/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-studio/app/src/main/res/values-night/: themes.xml
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.sidecar.conf.json
src-tauri/binaries/: README.md  apple-system-ai-aarch64-apple-darwin  libggml-base.0.12.0.dylib  libggml-rpc.0.dylib  libllama-common.0.dylib  libllama.0.0.9251.dylib  libllama.0.dylib  libmtmd.0.0.9251.dylib  libmtmd.0.dylib  llama-cli-aarch64-apple-darwin  llama-mtmd-cli-aarch64-apple-darwin  sd-cli  sd-cli-aarch64-apple-darwin  whisper-cli
src-tauri/icons/: icon.icns
src-tauri/native/: apple-system-ai.swift
src-tauri/src/: main.rs
